# ternary_hs

./: CHANGELOG.md  LICENSE  readme.md  ternary-hs.cabal
app/: Main.hs
src/: MyLib.hs
